centered popup horizontaly with margin on top. Fixed device control overlaping popup on hover. Added popup close button

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  /* display: flex; */
+  /* display: flex;
+  flex-direction: column;
+  flex-grow: 2; */
 }
 
 .content {
