--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -1,7 +1,12 @@
 .popup {
   position: absolute;
+  margin-left: 10%;
+  margin-right: 10%;
+  top: 10%;
   left: 0;
-  width: 30rem;
+  right: 0;
+  text-align: center;
+  /* max-width: 35rem; */
   height: 15rem;
   background-color: #ffffff;
   box-shadow: 0px 0px 10px 1px #969696;
@@ -9,13 +14,20 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  z-index: 100;
 }
-
+.popup__close {
+  cursor: pointer;
+}
 .popup__header {
   /* background-color: aqua; */
-  /* display: flex; */
+  position: relative;
   font-size: 2.5rem;
   font-weight: 300;
+}
+.popup__top-bar {
+  display: flex;
+  justify-content: space-between;
 }
 .popup__content {
   /* background-color: gold; */
@@ -27,5 +39,4 @@
 
 .popup__connection-state {
   font-size: 1rem;
-  /* margin-left: 0.3rem; */
 }
